edit bs4 className

--- a/index.html
+++ b/index.html
@@ -85,7 +85,7 @@
                                 <span><i class="fa fa-clock-o" aria-hidden="true"></i></span><p>{{item.Opentime}}</p> 
                                 <span class="ml-4"><i class="fa fa-usd" aria-hidden="true"></i></span><p>{{item.Ticketinfo | cashFilters }}</p>
                             </div>
-                            <div class="li-Icon d-flex flex-column">
+                            <div class="li-Icon d-flex flex-column flex-lg-row">
                                 <span><i class="fa fa-map-marker" aria-hidden="true"></i></span> <p>{{item.Add}}</p>
                                 <span class="ml-4"><i class="fa fa-mobile" aria-hidden="true"></i></span><p>{{item.Tel}}</p>
                             </div>
