--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
         <header class="header d-flex align-items-center">
             <div class="hearder-box d-flex flex-column flex-md-row align-items-center">
                 <a class="logo" href="#">
-                    <img src="/images/logo.svg" width="150" alt="">
+                    <img src="images/logo.svg" width="150" alt="">
                 </a>
                 <div class="search-box d-flex align-items-center ">
                     <div class="search d-flex align-items-center">
